--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Movie Trivia</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+        <title>Movie Trivia</title>
 </head>
 
-<body>
+<body background="assets/images/movie.jpg">
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="jumbotron bg-dark">
+                <div class="jumbotron">
                     <div class="row">
                         <div class="col-12">
                             <h1 class="display-4 text-center text-white">Movie Trivia!</h1>
