button click function, change background, move header, remove button

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-        <title>Movie Trivia</title>
+    <title>Movie Trivia</title>
 </head>
 
-<body background="assets/images/movie.jpg">
+<body class="bg">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="jumbotron">
-                    <div class="row">
+                    <div class="row" id="row1">
                         <div class="col-12">
-                            <h1 class="display-4 text-center text-white">Movie Trivia!</h1>
+                            <h1 class="display-4 text-center text-white">Movies Trivia!</h1>
                             <p class="lead"></p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 text-center">
+                        <div class="col-12 text-center questions">
                             <button id="singlebutton" name="singlebutton" class="btn btn-danger">Start!!</button>
                         </div>
                     </div>
@@ -42,5 +42,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+<script src="assets/javascript/app.js"></script>
 
 </html>
