finished timer function and display last page

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                     <div class="row" id="row1">
                         <div class="col-12">
                             <h1 class="display-4 text-center text-white">Movies Trivia!</h1>
-                            <p class="lead"></p>
+                            <h4 class="lead"></h4>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-12 text-center questions">
+                    <div class="rowQ">
+                        <div class="col-12 button text-center">
                             <button id="singlebutton" name="singlebutton" class="btn btn-danger">Start!!</button>
                         </div>
                     </div>
